package view;

public class GuiView implements SwingyView {

	@Override
	public void displayMessage(String message) {
		System.out.println(message);
	}
}
