package view;

public interface SwingyView {
	public void displayMessage(String message);
}
