@startuml swingy
skinparam ClassAttributeIconSize 0
skinparam DefaultFontSize 16

interface SwingyView {
	+getPlayerInput(): PlayerInput
	+displayMessage(message: String): void
}

' enum PlayerInput {
' 	game_action
' 	menu_action
' }

enum OutputFormatter {
	menu_feedback
	menu_ask
	game_feedback
	game_ask
	+getFormattedDisplay(unformattedMessage: String): String
}

class ConsoleView {
	+getPlayerInput(): PlayerInput
	+displayMessage(message: String): void
}

class GuiView {
	+getPlayerInput(): PlayerInput
	+displayMessage(message: String): void
}

' PlayerInput <- SwingyView
SwingyView -> OutputFormatter

SwingyView <|.. ConsoleView
SwingyView <|.. GuiView

@enduml
